# lasticot

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: LasticotCMakeConfig.cmake.in  LasticotCMakeConfig.h.in
main/: Client.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  test_worm.cpp
